--- a/package.json
+++ b/package.json
@@ -242,7 +242,9 @@
     "react-validation-mixin": "^5.4.0",
     "redux": "3.6.0",
     "redux-immutable": "4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-saga": "0.15.3",
+    "redux-thunk": "^2.2.0",
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
     "styled-components": "2.0.0",
