--- a/package.json
+++ b/package.json
@@ -215,9 +215,7 @@
     "babel-polyfill": "6.23.0",
     "chalk": "^1.1.3",
     "compression": "1.6.2",
-    "cors": "^2.8.4",
     "cross-env": "5.0.0",
-    "es6-promise": "^4.2.4",
     "express": "4.15.3",
     "fontfaceobserver": "2.0.9",
     "history": "4.6.3",
@@ -242,15 +240,12 @@
     "react-validation-mixin": "^5.4.0",
     "redux": "3.6.0",
     "redux-immutable": "4.0.0",
-    "redux-logger": "^3.0.6",
     "redux-saga": "0.15.3",
-    "redux-thunk": "^2.2.0",
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
     "styled-components": "2.0.0",
-    "superagent": "^3.8.2",
     "warning": "3.0.0",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
     "add-asset-html-webpack-plugin": "2.0.1",
