--- a/package.json
+++ b/package.json
@@ -227,13 +227,11 @@
     "lodash": "4.17.4",
     "minimist": "1.2.0",
     "prop-types": "15.5.10",
-    "react": "^15.6.1",
+    "react": "15.6.1",
     "react-dom": "15.6.1",
-    "react-dropzone": "^4.2.9",
     "react-helmet": "5.1.3",
     "react-intl": "2.3.0",
     "react-loadable": "4.0.3",
-    "react-popup": "^0.9.2",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.1",
     "react-router-redux": "5.0.0-alpha.6",
@@ -244,7 +242,6 @@
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
     "styled-components": "2.0.0",
-    "superagent": "^3.8.2",
     "warning": "3.0.0",
     "whatwg-fetch": "2.0.3"
   },
