--- a/package.json
+++ b/package.json
@@ -245,7 +245,9 @@
     "styled-components": "2.0.0",
     "superagent": "^3.8.2",
     "warning": "3.0.0",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "superagent": "^3.8.2",
+    "react-dropzone" :"^4.2.9"
   },
   "devDependencies": {
     "add-asset-html-webpack-plugin": "2.0.1",
