--- a/package.json
+++ b/package.json
@@ -219,6 +219,7 @@
     "express": "4.15.3",
     "fontfaceobserver": "2.0.9",
     "history": "4.6.3",
+    "hoek": "^5.0.3",
     "hoist-non-react-statics": "2.1.1",
     "immutable": "3.8.1",
     "intl": "1.2.5",
@@ -245,9 +246,7 @@
     "styled-components": "2.0.0",
     "superagent": "^3.8.2",
     "warning": "3.0.0",
-    "whatwg-fetch": "2.0.3",
-    "superagent": "^3.8.2",
-    "react-dropzone" :"^4.2.9"
+    "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
     "add-asset-html-webpack-plugin": "2.0.1",
