--- a/package.json
+++ b/package.json
@@ -245,6 +245,7 @@
     "sanitize.css": "4.1.0",
     "styled-components": "2.0.0",
     "superagent": "^3.8.2",
+    "universal-cookie": "^2.1.5",
     "warning": "3.0.0",
     "whatwg-fetch": "2.0.3"
   },
