--- a/package.json
+++ b/package.json
@@ -226,7 +226,9 @@
     "invariant": "2.2.2",
     "ip": "1.1.5",
     "lodash": "4.17.4",
+    "mime": "^2.3.1",
     "minimist": "1.2.0",
+    "node-mime": "^1.4.1",
     "prop-types": "15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
