--- a/package.json
+++ b/package.json
@@ -214,10 +214,11 @@
   "dependencies": {
     "babel-polyfill": "6.23.0",
     "chalk": "^1.1.3",
-    "compression": "1.6.2",
+    "compression": "^1.7.3",
     "cross-env": "5.0.0",
-    "express": "4.15.3",
+    "express": "^4.16.3",
     "fontfaceobserver": "2.0.9",
+    "fresh": "^0.5.2",
     "history": "4.6.3",
     "hoek": "^5.0.3",
     "hoist-non-react-statics": "2.1.1",
@@ -225,10 +226,10 @@
     "intl": "1.2.5",
     "invariant": "2.2.2",
     "ip": "1.1.5",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.10",
     "mime": "^2.3.1",
     "minimist": "1.2.0",
-    "node-mime": "^1.4.1",
+    "node-mime": "^1.0.0",
     "prop-types": "15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
@@ -253,8 +254,8 @@
   },
   "devDependencies": {
     "add-asset-html-webpack-plugin": "2.0.1",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.1.0",
     "babel-plugin-dynamic-import-node": "1.0.2",
@@ -269,7 +270,7 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "circular-dependency-plugin": "3.0.0",
-    "coveralls": "2.13.1",
+    "coveralls": "^3.0.2",
     "css-loader": "0.28.4",
     "enzyme": "2.8.2",
     "eslint": "3.19.0",
@@ -285,9 +286,9 @@
     "file-loader": "0.11.1",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.29.0",
-    "image-webpack-loader": "2.0.0",
+    "image-webpack-loader": "^4.3.1",
     "imports-loader": "0.7.1",
-    "jest-cli": "20.0.4",
+    "jest-cli": "^20.0.4",
     "lint-staged": "3.5.1",
     "ngrok": "2.2.9",
     "node-plop": "0.7.0",
